myhero_ernst.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myhero-ernst
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myhero
      tier: ernst
  template:
    metadata:
      labels:
        app: myhero
        tier: ernst
    spec:
      containers:
      - name: myhero-ernst
        image: hpreston/myhero_ernst:latest
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 200m
            memory: 32M
      restartPolicy: Always
