myhero_app.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: myhero-app
  labels:
    app: myhero
    tier: app
spec:
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: myhero
    tier: app
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myhero-app
spec:
  replicas: 4
  selector:
    matchLabels:
      app: myhero
      tier: app
  template:
    metadata:
      labels:
        app: myhero
        tier: app
    spec:
      containers:
      - name: myhero-app
        image: hpreston/myhero_app:latest
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5
        ports:
        - containerPort: 5000
          name: http
          protocol: TCP
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 200m
            memory: 48M
      restartPolicy: Always
