myhero_data.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: myhero-data
  labels:
    app: myhero
    tier: data
spec:
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: myhero
    tier: data
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myhero-data
spec:
  replicas: 1
  selector:
      matchLabels:
        app: myhero
        tier: data
  template:
    metadata:
      labels:
        app: myhero
        tier: data
    spec:
      containers:
      - name: myhero-data
        image: hpreston/myhero_data:latest
        livenessProbe:
          httpGet:
            path: /hero_list
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /hero_list
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5
        ports:
        - containerPort: 5000
          name: http
          protocol: TCP
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 200m
            memory: 64M
      restartPolicy: Always
