myhero_ui.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: myhero-ui
  labels:
    app: myhero
    tier: ui
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: myhero
    tier: ui
  type: LoadBalancer
  loadBalancerIP: 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myhero-ui
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myhero
      tier: ui
  template:
    metadata:
      labels:
        app: myhero
        tier: ui
    spec:
      containers:
      - name: myhero-ui
        image: hpreston/myhero_ui:latest
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 200m
            memory: 48M
      restartPolicy: Always
